Update life blog

--- a/LifeBlog.html
+++ b/LifeBlog.html
@@ -84,15 +84,20 @@
     <!--主内容-->
     <div>
 
+      <div>
+        <h3 >
+            [1.19.2022] 准备新的学期！<br>
+            Preparing for the new semester
+          </h3>
+          <h5>
+           还有几天就是新的春季学期了，希望自己全力以赴取得好成绩，同时希望有更多时间来研究技术与刷题！！哈哈<br>
+           There are only few days left for the winter break, I hope I could get a better grade in the new term while having more spare time on studing techniques and Algorithm practice
+          </h5>
+          <div style="text-align: center;">
+            <img src="Spring2022.jpg" width="60%">
+          </div>
+       </div>
 
-
-
-
-
-
-
-
-      
       <div>
         <h3 >
             [1.15.2022] 去Elver公园玩滑雪板！<br>
