--- a/LifeBlog.html
+++ b/LifeBlog.html
@@ -86,6 +86,21 @@
 
       <div>
         <h3 >
+            [2.11.2022] 被冰面盖掉的自由女神！<br>
+             Stature of Liberty covered by ice!
+          </h3>
+          <h5>
+           新学期开始了， 这三周非常充实， 学到了很多新知识，今天来看看麦迪逊一年一度的冰封自由女神吧！！<br>
+           The new school year has begun, the three weeks have been very full, learned a lot of new knowledge, today come to Madison annual ice Statue of Liberty!!
+          </h5>
+          <div style="text-align: center;">
+            <img src="newyork.jpg" width="60%">
+          </div>
+       </div>
+
+
+      <div>
+        <h3 >
             [1.19.2022] 准备新的学期！<br>
             Preparing for the new semester
           </h3>
