--- a/index.html
+++ b/index.html
@@ -260,7 +260,8 @@
            [1.12.2022] "Add inline block style to the directive bar to fit differnt view" "Update web links with inline block style and english" "add english version to directive bar"<br>
            [1.13.2022] "Add background to all the pages"<br>
            [1.15.2022] "Change the margin size of the Life&Tech blog unit and update life blog" "Update video section to recent fun event" "Update margin display to percentage"<br>
-           [1.16.2022] "Use form to create a search bar on the front page" "replace baidu link with youtube homepage"
+           [1.16.2022] "Use form to create a search bar on the front page" "replace baidu link with youtube homepage"<br>
+           [1.22.2022] "Update lifeblog".
          </p>
         </div>
       </div>
