Update baidu sEARCHbar

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       background-color: rgb(255, 255, 255);
      border:0px;
      box-shadow: rgb(216, 216, 216)  0px 0px 8px;
-     text-indent:10px;
+     text-indent:25px;
      font-size:18px;
      ">
      &nbsp;
@@ -261,7 +261,7 @@
            [1.13.2022] "Add background to all the pages"<br>
            [1.15.2022] "Change the margin size of the Life&Tech blog unit and update life blog" "Update video section to recent fun event" "Update margin display to percentage"<br>
            [1.16.2022] "Use form to create a search bar on the front page" "replace baidu link with youtube homepage"<br>
-           [1.22.2022] "Update lifeblog".
+           [1.22.2022] "Update lifeblog". "Change Baidu Search Bar Indent"
          </p>
         </div>
       </div>
