replace baidu with google

--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@
     
       </div>
 
-<!--表单使用百度搜索试验-->
+<!--表单使用谷歌搜索试验-->
 </form>
 <div style="text-align: center; margin-top: 7%; ">
-  <form action="https://www.baidu.com/s" target="_blank">
-      <img src="./baiduCon.png" width="40px" style="margin-bottom: -12px;">&nbsp;&nbsp;
+  <form action="https://www.google.com/search" method="get" target="_blank">
+      <img src="./GGGO.gif" width="100px" style="margin-bottom: -36px;">&nbsp;&nbsp;
       
-      <input type="text" name="wd" placeholder=" 请输入搜索内容 Please enter the search keyword"style="
+      <input type="text" name="q" placeholder=" 请输入搜索内容 Please enter the search keyword"style="
       border-radius:80px;
-      height: 55px;
+      height: 47px;
       width:50%;
       background-color: rgb(255, 255, 255);
      border:0px;
@@ -117,10 +117,10 @@
       <!--个人网页指引-->
       <div style="text-align: center; margin-top: 15%; margin-bottom: 10%;"> 
          <div style="display:inline-block; vertical-align: middle; margin-left: 2.8%; margin-right: 2.8%;">
-           <a href="https://www.google.com" target="_blank">
-             <img src="./google.png" width="150px">
+           <a href="https://www.baidu.com" target="_blank">
+             <img src="./baidu.png" width="140px">
            </a>
-           <p>Google Search</p>
+           <p>Baidu Search</p>
          </div>
 
          <div style="display:inline-block; vertical-align: middle; margin-left: 2.8%; margin-right:2.8%;">
@@ -266,7 +266,8 @@
            [1.16.2022] "Use form to create a search bar on the front page" "replace baidu link with youtube homepage"<br>
            [2.11.2022] "Update lifeblog". "Change Baidu Search Bar Indent"<br>
            [3.3.2022] "Update page to the Chinese Server and update main page"<br>
-           [6.23.2022] "Add keywords and description for search engine optimization" "delete english words" "add server change to U.S.page"
+           [6.22.2022] "Add keywords and description for search engine optimization" "delete english words" "add server change to U.S.page"<br>
+           [6.23.2022] "Replace baidu search with google search" "Add google gif" "reduce search bar height"
          </p>
         </div>
       </div>
