Create new part - project

--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
                <a href="./index.html" style="vertical-align: middle; font-size: 33px; "><b>HomePage</b></a>
          
              </div>
+
+             <div style="text-align: center; display: inline-block; vertical-align:6px; margin-left: 20px; margin-right: 20px;">
+              <a href="./Project.html" style="vertical-align: middle; font-size: 33px; ">Project</a>
+             </div>
+
              <div style="text-align: center; display: inline-block;vertical-align:6px; margin-left: 20px; margin-right: 20px;">
                <a href="./TechBlog.html" style="vertical-align: middle; font-size: 33px;">Mixed Technical Blog</a>
             
@@ -148,11 +153,11 @@
       <!--近期活动视频展示-->
       <div>
         <h3 style="color: rgb(41, 107, 168); text-align: center;margin-top: 150px; font-size: 30px;">
-        Recent Fun Event : <b>Snow slide in Elver Park</b> [Latest in 2022.1.15]
+        Recent Fun Event : <b>Summer Break Travel to New York City</b> [Latest in 2022.7.9]
         </h3>
  
         <div style="text-align: center; ">
-          <video src="./snowS.mp4" width=80% controls="controls">代码展示</video>
+          <video src="./newyok.mp4" width=80% controls="controls">视频展示</video>
         </div>
       </div>
 
@@ -267,7 +272,9 @@
            [2.11.2022] "Update lifeblog". "Change Baidu Search Bar Indent"<br>
            [3.3.2022] "Update page to the Chinese Server and update main page"<br>
            [6.22.2022] "Add keywords and description for search engine optimization" "delete english words" "add server change to U.S.page"<br>
-           [6.23.2022] "Replace baidu search with google search" "Add google gif" "reduce search bar height"
+           [6.23.2022] "Replace baidu search with google search" "Add google gif" "reduce search bar height" <br>
+           [7.5.2022] "Update icon on each sub page" "create new part--project"<br>
+           [7.27.2022] "Update latest fun event & small adjustion"
          </p>
         </div>
       </div>
