--- a/DataAlgo.html
+++ b/DataAlgo.html
@@ -44,14 +44,21 @@
     <div style="display: inline-block;">
       <img src="./LOFO.png"  width="390px" style="vertical-align: middle;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
      </div>
+
      <div style="text-align: center; display: inline-block; vertical-align:6px; margin-left: 20px; margin-right: 20px;">
        <a href="./index.html" style="vertical-align: middle; font-size: 33px; ">HomePage</a>
  
      </div>
+
+     <div style="text-align: center; display: inline-block; vertical-align:6px; margin-left: 20px; margin-right: 20px;">
+      <a href="./Project.html" style="vertical-align: middle; font-size: 33px; ">Project</a>
+     </div>
+
      <div style="text-align: center; display: inline-block;vertical-align:6px; margin-left: 20px; margin-right: 20px;">
        <a href="./TechBlog.html" style="vertical-align: middle; font-size: 33px;"><b>Mixed Technical Blog</b></a>
     
      </div>
+
      <div style=" text-align: center; display: inline-block; vertical-align:6px;  margin-left: 20px; margin-right: 20px;">
        <a href="./LifeBlog.html" style="vertical-align: middle; font-size: 33px;">Daily Life Blog</a>
 
