--- a/LifeBlog.html
+++ b/LifeBlog.html
@@ -52,6 +52,11 @@
          <a href="./index.html" style="vertical-align: middle; font-size: 33px; ">HomePage</a>
    
        </div>
+
+       <div style="text-align: center; display: inline-block; vertical-align:6px; margin-left: 20px; margin-right: 20px;">
+        <a href="./Project.html" style="vertical-align: middle; font-size: 33px; ">Project</a>
+       </div>
+
        <div style="text-align: center; display: inline-block;vertical-align:6px; margin-left: 20px; margin-right: 20px;">
          <a href="./TechBlog.html" style="vertical-align: middle; font-size: 33px;">Mixed Technical Blog</a>
       
