--- a/DataAlgo.html
+++ b/DataAlgo.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Data Structure and Algorithm</title>
+    <link href="./maincss.css" rel="stylesheet" type="text/css">
     <style>
-       a{
-        text-decoration: none;
-       }
+   
        h1{
          text-align: center;
          color: rgb(92, 58, 146);
@@ -21,14 +20,6 @@
        margin-left: 10%;
        margin-right:10%;
        }
-
-
-       body{
-          background-image: url("./backk.png");
-          background-repeat: no-repeat;
-          background-attachment: fixed;
-          background-size: 100% 100%;
-         }
 
        hr{
          margin-left: 10%;
@@ -46,28 +37,28 @@
      </div>
 
      <div style="text-align: center; display: inline-block; vertical-align:6px; margin-left: 20px; margin-right: 20px;">
-       <a href="./index.html" style="vertical-align: middle; font-size: 33px; ">HomePage</a>
+       <a href="./index.html" style="vertical-align: middle; font-size: 33px; "class="nav">HomePage</a>
  
      </div>
 
      <div style="text-align: center; display: inline-block; vertical-align:6px; margin-left: 20px; margin-right: 20px;">
-      <a href="./Project.html" style="vertical-align: middle; font-size: 33px; ">Project</a>
+      <a href="./Project.html" style="vertical-align: middle; font-size: 33px; "class="nav">Project</a>
      </div>
 
      <div style="text-align: center; display: inline-block;vertical-align:6px; margin-left: 20px; margin-right: 20px;">
-       <a href="./TechBlog.html" style="vertical-align: middle; font-size: 33px;"><b>Mixed Technical Blog</b></a>
+       <a href="./TechBlog.html" style="vertical-align: middle; font-size: 33px;"class="nav"><b>Mixed Technical Blog</b></a>
     
      </div>
 
      <div style=" text-align: center; display: inline-block; vertical-align:6px;  margin-left: 20px; margin-right: 20px;">
-       <a href="./LifeBlog.html" style="vertical-align: middle; font-size: 33px;">Daily Life Blog</a>
+       <a href="./LifeBlog.html" style="vertical-align: middle; font-size: 33px;"class="nav">Daily Life Blog</a>
 
      </div>
      <div style="text-align: center; display: inline-block; vertical-align:6px;  margin-left: 20px; margin-right: 20px;">
-       <a href="./index.html#author" style="vertical-align: middle; font-size: 33px;">About the author</a> 
+       <a href="./index.html#author" style="vertical-align: middle; font-size: 33px;"class="nav">About the author</a> 
     
      </div>
-     <div style="text-align: center; display: inline-block; vertical-align:-25px;  margin-left: 20px; margin-right: 20px;">
+     <div style="text-align: center; display: inline-block; vertical-align:-25px;  margin-left: 20px; margin-right: 20px;"class="nav">
       <a href="http://www.tonymisaka.cn/DataAlgo.html" style="vertical-align: middle; font-size: 33px;"><img src="./CNFlag.png" width="33px" height="20px"></a> 
       <p style="margin-top: 0px;font-size: 10px;">国服切换<br>China Homepage</p>
    
