--- a/DataAlgo.html
+++ b/DataAlgo.html
@@ -37,29 +37,29 @@
      </div>
 
      <div style="text-align: center; display: inline-block; vertical-align:6px; margin-left: 20px; margin-right: 20px;">
-       <a href="./index.html" style="vertical-align: middle; font-size: 33px; "class="nav">HomePage</a>
+       <a href="./index.html" style="vertical-align: middle;"class="nav">HomePage</a>
  
      </div>
 
      <div style="text-align: center; display: inline-block; vertical-align:6px; margin-left: 20px; margin-right: 20px;">
-      <a href="./Project.html" style="vertical-align: middle; font-size: 33px; "class="nav">Project</a>
+      <a href="./Project.html" style="vertical-align: middle; "class="nav">Project</a>
      </div>
 
      <div style="text-align: center; display: inline-block;vertical-align:6px; margin-left: 20px; margin-right: 20px;">
-       <a href="./TechBlog.html" style="vertical-align: middle; font-size: 33px;"class="nav"><b>Mixed Technical Blog</b></a>
+       <a href="./TechBlog.html" style="vertical-align: middle; "class="nav"><b>Mixed Technical Blog</b></a>
     
      </div>
 
      <div style=" text-align: center; display: inline-block; vertical-align:6px;  margin-left: 20px; margin-right: 20px;">
-       <a href="./LifeBlog.html" style="vertical-align: middle; font-size: 33px;"class="nav">Daily Life Blog</a>
+       <a href="./LifeBlog.html" style="vertical-align: middle;"class="nav">Daily Life Blog</a>
 
      </div>
      <div style="text-align: center; display: inline-block; vertical-align:6px;  margin-left: 20px; margin-right: 20px;">
-       <a href="./index.html#author" style="vertical-align: middle; font-size: 33px;"class="nav">About the author</a> 
+       <a href="./index.html#author" style="vertical-align: middle; "class="nav">About the author</a> 
     
      </div>
      <div style="text-align: center; display: inline-block; vertical-align:-25px;  margin-left: 20px; margin-right: 20px;"class="nav">
-      <a href="http://www.tonymisaka.cn/DataAlgo.html" style="vertical-align: middle; font-size: 33px;"><img src="./CNFlag.png" width="33px" height="20px"></a> 
+      <a href="http://www.tonymisaka.cn/DataAlgo.html" style="vertical-align: middle;"><img src="./CNFlag.png" width="33px" height="20px"></a> 
       <p style="margin-top: 0px;font-size: 10px;">国服切换<br>China Homepage</p>
    
     </div>
