--- a/Test.html
+++ b/Test.html
@@ -19,8 +19,7 @@
 
    }
 
-  </style>
-</head>
+  </style>0
 <body>
 <!--测试原件标题-->
 <div>
@@ -146,13 +145,44 @@
       border:9px;
      background-color: rgb(233, 232, 232);
      box-shadow: rgb(255, 255, 255) 2px 2px 2px;
-
      ">
 
   </form>
 
+
+  <!--表单打开地址-->
+ <div style="margin-top: 1000px; margin-bottom: 100px;">
+  <form action="https://y.qq.com/n/ryqq/search" method="get" target="_blank" autocomplete="off">
+    <input  type="text" name="w">
+
+    <input type="text" name="t" value="song" >
+
+    <input type="text" name="remoteplace" value="txt.yqq.center">
+   
+
+
+    <input type="submit" name="submit" value="搜索">
+  </form>
+  </div>
+
 </div>
+<form>
+  <input type="file" name="this">
 
 
+</form>
+
+
+
+<form method="get">
+ 选项1: <input type="radio" name="abc" value="1"><br>
+ 选项2: <input type="radio" name="abc" value="2"><br>
+ 多选1: <input type="checkbox" name="box1" value="1"><br>
+ 多选2: <input type="checkbox" name="box1" value="1"><br>
+ 多选3: <input type="checkbox" name="box2" value="1"><br>
+ <input type="submit" name="submit" value="提交">
+
+
+</form>
 </body>
 </html>
