--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
       <div style="margin-top: 50px;">
         <h1 style="text-align:center; color:rgb(90, 149, 204)">
             <span style="color:rgb(63, 170, 134)">News : </span>
-           Update new comment function on my clock!!<br>
-             Welcome to the <a href="https://tonymisaka.github.io/Clock.html">Reactive Clock Page</a>
+         Chinese Server version of my personal website Now Available!!<br>
+             Welcome to the <a href="http://www.Tonymisaka.cn">www.tonymisaka.cn</a>
         </h1>
       </div>
      </div>
