--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
          <div id= "acontent"style="color: rgb(77, 77, 77); text-align: center; font-size:22px;">
             <p> 
-               Haitian Xu, student at University of Wisconsin-madison, undergraduate Computer Science Major. He is focusing on Web whole stack Development. He is famous of tools: Java, HTML, CSS, JavaScript, Python, C, GIT, Github
+               Haitian Xu, student at University of Wisconsin-madison, undergraduate Computer Science Major. He is focusing on Web whole stack Development. He is familiar with tools: Java, HTML, CSS, JavaScript, Python, C, GIT, Github
             </p>
           
             Contact Email: <a href="mailto:hxu339@wisc.edu?subject=homepage%20email">hxu339@wisc.edu</a>
