--- a/LifeBlog.html
+++ b/LifeBlog.html
@@ -6,6 +6,7 @@
     LifeBlog
 </title>
 <link href="./maincss.css" rel="stylesheet" type="text/css">
+<script src="./index.js" defer></script>
 <style>
     h1{
         text-align: center;
@@ -163,5 +164,6 @@
         Updating in progress!! 
       </h2>
     </div>
+    <img class="dogem" src="./doge.gif">
 </body>
 </html>
