--- a/Photography.html
+++ b/Photography.html
@@ -6,6 +6,7 @@
     <link href="./maincss.css" rel="stylesheet" type="text/css">
     <link href="./Photography.css" rel="stylesheet" type="text/css">
     <script src="Photography.js" defer></script>
+    <script src="./index.js" defer></script>
 </head>
 <body>
      <div class="mnav" id = "nPhoto">
@@ -24,5 +25,6 @@
              </ul>            
          </div>
      </div>
+     <img class="dogem" src="./doge.gif">
 </body>
 </html>
