--- a/Project.html
+++ b/Project.html
@@ -8,6 +8,7 @@
         <link href="./maincss.css" rel="stylesheet" type="text/css">
         <link href="./Project.css" rel="stylesheet" type="text/css">
         <script src="Project.js" defer></script>
+        <script src="./index.js" defer></script>
     </head>
     <body>
         <div class="mnav" id = "nPro">
@@ -27,5 +28,6 @@
                  </ul>
             </div>
         </div>
+        <img class="dogem" src="./doge.gif">
     </body>
 </html>
