--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="description" content="Welcome to Haitian's CyberWorld!!">
         <link href="./favicon.png" type="image/png" rel="icon" size="32x32">
         <link href="./maincss.css" rel="stylesheet" type="text/css">
-       
+        <script src="./index.js" defer></script>
   </head>
   <body>
     
@@ -212,7 +212,8 @@
            [8.23.2022] "Add html5 elements"<br>
            [10.10.2022] "Refine Logo to new one"<br>
            [12.1.2022] "Add JS to refine nav bar" <br>
-           [1.12.2023] "Update projects"
+           [1.12.2023] "Update projects"<br>
+           [2.22.2023] "Update a doge near mouse"
          </p>
         </div>
       </div>
@@ -224,6 +225,8 @@
           <img src="./wec.jpg" height="300px" width="215px" class="wh">
          </div>
       </div>
+      <img class="dogem" src="./doge.gif">
+
     </footer>
   </body>
   </html>
