--- a/LifeBlog.html
+++ b/LifeBlog.html
@@ -6,6 +6,7 @@
     LifeBlog
 </title>
 <link href="./maincss.css" rel="stylesheet" type="text/css">
+<link href="./favicon.png" type="image/png" rel="icon" size="32x32">
 <script src="./index.js" defer></script>
 <style>
     h1{
