--- a/Photography.html
+++ b/Photography.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <link href="./maincss.css" rel="stylesheet" type="text/css">
     <link href="./Photography.css" rel="stylesheet" type="text/css">
+    <link href="./favicon.png" type="image/png" rel="icon" size="32x32">
     <script src="Photography.js" defer></script>
     <script src="./index.js" defer></script>
 </head>
