--- a/index.html
+++ b/index.html
@@ -213,7 +213,8 @@
            [10.10.2022] "Refine Logo to new one"<br>
            [12.1.2022] "Add JS to refine nav bar" <br>
            [1.12.2023] "Update projects"<br>
-           [2.22.2023] "Update a doge near mouse"
+           [2.22.2023] "Update a doge near mouse"<br>
+           [3.1.2023] "Change the Photography CSS"
          </p>
         </div>
       </div>
