--- a/Project.html
+++ b/Project.html
@@ -7,6 +7,7 @@
         <meta charset="utf-8">
         <link href="./maincss.css" rel="stylesheet" type="text/css">
         <link href="./Project.css" rel="stylesheet" type="text/css">
+        <link href="./favicon.png" type="image/png" rel="icon" size="32x32">
         <script src="Project.js" defer></script>
         <script src="./index.js" defer></script>
     </head>
