Add phone ratio adjustment

--- a/Clock.html
+++ b/Clock.html
@@ -13,7 +13,7 @@
     <div class="bigbox">
     </div>
     <div class="comments">
-        <p id="into">Comments on wallpaper!</p>
+        <p id="into">Comments on wallpaper! (Beta)</p>
         <textarea class="textt" cols="70" rows="10">
 
         </textarea>
